--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -7,12 +7,15 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-02-27 23:03台北标准时间\n"
-"Last-Translator: Ch Yang <dr3939 AT gmail.com>\n"
+"PO-Revision-Date: 2009-06-18 17:57+0200\n"
+"Last-Translator: Chung-Han Yang <dr3939@gmail.com>\n"
 "Language-Team: Foswiki Chinese <dr3939 AT gmail.com>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 1.2.1\n"
 "X-Poedit-Country: Taiwan\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
@@ -158,29 +161,29 @@ msgstr "%1 由 %4 从 %2 移到 %3"
 #: core/templates/validate.tmpl:14
 msgid ""
 "%1 has detected a suspicious request to change a page."
-msgstr ""
+msgstr "%1 已侦测到一个疑似的请求要求修改一个主题。"
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "It can occur if you use the back button of the browser after saving a page "
 "and try to save the same page again."
-msgstr ""
+msgstr "储存网页后，若您再按浏览器的后退键，并尝试储存同一页面就会发生。"
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "It can also be caused by someone trying to use your identity to change "
 "content on %1 without your knowledge."
-msgstr ""
+msgstr "这也可能起因于他人在您不知情时，利用您的帐号修改 ％1 的内容。"
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press OK to confirm that this change was intentional."
-msgstr ""
+msgstr "按 OK 以确认，这是您要的修改。"
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
-msgstr ""
+msgstr "其它请按取消。"
 
 #: core/templates/messages.tmpl:22
 msgid "%1 to create another web"
@@ -227,9 +230,8 @@ msgid "(%1 login)"
 msgstr "(%1 登入)"
 
 #: core/templates/validate.tmpl:6
-#, fuzzy
 msgid "(%1 validation)"
-msgstr "(%1 登入)"
+msgstr "(%1 验证)"
 
 #: PatternSkin/templates/rdiff.pattern.tmpl:6 core/templates/rdiff.tmpl:4
 msgid "(%1 vs. %2)"
@@ -402,7 +404,6 @@ msgid "*Formatting help:*"
 msgstr "*格式说明:*"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:15
-#, fuzzy
 msgid ""
 "*Important:* the information provided in this form will be stored in a "
 "database on the Foswiki server. This database is accessible to anyone who "
