Item1568: Updating the changes Crawford did on language files. This reverts the edits done by translators today :-(
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4205 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/Foswiki.pot
+++ b/core/locale/Foswiki.pot
@@ -151,19 +151,13 @@ msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
+"%1 has received a suspicious change request from your browser."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
-msgstr ""
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
@@ -174,6 +168,16 @@ msgstr ""
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
 msgstr ""
 
 #: core/templates/messages.tmpl:22
@@ -2476,7 +2480,7 @@ msgid "Summaries"
 msgstr ""
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr ""
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
