--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -160,19 +160,13 @@ msgstr "uživatel  %4 přesunul %1 z %2 do %3"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
+"%1 has received a suspicious change request from your browser."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
-msgstr ""
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
@@ -183,6 +177,16 @@ msgstr ""
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
 msgstr ""
 
 #: core/templates/messages.tmpl:22
@@ -2706,7 +2710,7 @@ msgid "Summaries"
 msgstr "Shrnutí"
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr ""
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
@@ -3798,7 +3802,7 @@ msgstr ""
 #: core/templates/viewtopicactionbuttons.tmpl:21
 #, fuzzy
 msgid "title='Printable version of this topic' accesskey='p'>&Print version"
-msgstr "Verze pro vytištění tohoto článku"
+msgstr "Verze pro vytištění tohoto článku"
 
 #: core/templates/viewtopicactionbuttons.tmpl:9
 #, fuzzy
