--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -160,39 +160,34 @@ msgstr "%1 wurde durch %4 von %2 am %3 hierher verschoben"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
+"%1 has received a suspicious change request from your browser."
 msgstr ""
-"%1 hat von ihrem Browser eine Anfrage mit einer abgelaufenen "
-"Bestätigungsnummer bekommen. Möglicherweise benutzt jemand anders ihre "
-"Sitzung um etwas zu veröffentlichen. Wollen Sie die Anfrage von %1 "
-"durchführen?"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
-"Dies kann passieren, wenn Sie die \"Zurück\"-Taste im Browser gedrückt haben "
-"nachdem Sie eine Seite gespeichert haben und nun versuchen dieselbe Seite "
-"noch einmal zu speichern."
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
-msgstr ""
-"Dies kann auch passieren wenn jemand versucht ihre Identität zu benutzen, um "
-"Änderungen ohne ihre Wissen auf %1 durchzuführen."
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press OK to confirm that this change was intentional."
-msgstr "Drücken Sie OK, um die Änderung zu bestätigen."
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
-msgstr "Ansonsten drücken Sie abbrechen."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
+msgstr ""
 
 #: core/templates/messages.tmpl:22
 msgid "%1 to create another web"
@@ -2718,7 +2713,7 @@ msgid "Summaries"
 msgstr "Zusammenfassungen"
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr "Verdächtige Anfrage vom Browser"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
