--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -159,35 +159,34 @@ msgstr "%1 a été déplacé depuis %2 vers %3 par %4"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
-msgstr "%1 a détecté une requête suspecte de changement d'une page."
+"%1 has received a suspicious change request from your browser."
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
-"Cela peut arriver si vous utilisez le bouton précédent du navigateur après "
-"avoir sauvegardé une page et que vous tentez de sauvegarder le même page de "
-"nouveau."
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
-msgstr ""
-"Cela peut aussi se produire si quelqu'un tente d'utiliser votre identité "
-"pour changer le contenu sur %1 à votre insu."
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press OK to confirm that this change was intentional."
-msgstr "Pressez OK pour confirmer que ce changement est intentionnel."
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
-msgstr "Autrement, pressez Annuler."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
+msgstr ""
 
 #: core/templates/messages.tmpl:22
 msgid "%1 to create another web"
@@ -2741,7 +2740,7 @@ msgid "Summaries"
 msgstr "Les résumés"
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr "Confirmation nécessaire"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
