--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -164,19 +164,13 @@ msgstr "%1 は %4 で %2 から %3 に移動します"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
+"%1 has received a suspicious change request from your browser."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
-msgstr ""
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
@@ -187,6 +181,16 @@ msgstr ""
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
 msgstr ""
 
 #: core/templates/messages.tmpl:22
@@ -3431,7 +3435,7 @@ msgid ""
 "the form presented to you when this e-mail was sent, or by visiting %2"
 msgstr ""
 "あなたのメールアドレスをチェックする必要があります。これは、送信後現在フォー"
-"ムの %1又は %2を経由して行うことができます"
+"ムの %1又は %2を経由して行ことができます"
 
 #: TopicUserMappingContrib/data/System/ChangeEmailAddress.txt:7
 #, fuzzy
