--- a/core/locale/pt-br.po
+++ b/core/locale/pt-br.po
@@ -158,19 +158,13 @@ msgstr "%1 movido de %2 em %3 por %4"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
+"%1 has received a suspicious change request from your browser."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
-msgstr ""
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
 msgstr ""
 
 #: core/templates/validate.tmpl:14
@@ -181,6 +175,16 @@ msgstr ""
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
 msgstr ""
 
 #: core/templates/messages.tmpl:22
@@ -2701,7 +2705,7 @@ msgid "Summaries"
 msgstr "Resumos"
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr ""
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
