--- a/core/locale/zh-tw.po
+++ b/core/locale/zh-tw.po
@@ -160,30 +160,34 @@ msgstr "%1 由 %4 從 %2 移到 %3"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 has detected a suspicious request to change a page."
-msgstr "%1 已偵測到一個疑似的請求要求修改一個主題。"
+"%1 has received a suspicious change request from your browser."
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"It can occur if you use the back button of the browser after saving a page "
-"and try to save the same page again."
-msgstr "儲存網頁後，若您再按瀏覽器的後退鍵，並嘗試儲存同一頁面就會發生。"
-
-#: core/templates/validate.tmpl:14
-msgid ""
-"It can also be caused by someone trying to use your identity to change "
-"content on %1 without your knowledge."
-msgstr "這也可能起因於他人在您不知情時，利用您的帳號修改 ％1 的內容。"
+"There is a risk that someone may be trying to use your identity to "
+"change content on %1 without your knowledge."
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press OK to confirm that this change was intentional."
-msgstr "按 OK 以確認，這是您要的修改。"
+msgstr ""
 
 #: core/templates/validate.tmpl:14
 msgid ""
 "Press Cancel otherwise."
-msgstr "其它請按取消。"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"If you are unsure what this means, read:"
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"why you are being asked to confirm"
+msgstr ""
 
 #: core/templates/messages.tmpl:22
 msgid "%1 to create another web"
@@ -2549,7 +2553,7 @@ msgid "Summaries"
 msgstr "摘要"
 
 #: core/templates/validate.tmpl:8
-msgid "Confirmation required"
+msgid "Warning! Confirmation required"
 msgstr ""
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
