--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -6,12 +6,15 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2007-12-04 12:22-0300\n"
-"Last-Translator: Ivan Kuncl <kuncl@centrum.cz>\n"
+"PO-Revision-Date: 2009-06-19 14:31+0200\n"
+"Last-Translator: Milan Mašek <milan.m.masek@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Pootle 1.2.1\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:450
@@ -41,9 +44,8 @@ msgstr ""
 
 #: core/templates/registerfailednotremoved.tmpl:3
 #: core/templates/registerfailedremoved.tmpl:3
-#, fuzzy
 msgid "%1 - Registration failure for %2 (%3)"
-msgstr "%1 - Registrace pro %2 (%3)"
+msgstr "%1 - Registrace selhala %2 (%3)"
 
 #: TopicUserMappingContrib/data/System/ManagingUsers.txt:116
 #: core/templates/registernotify.tmpl:3
@@ -52,33 +54,28 @@ msgid "%1 - Registration for %2 (%3)"
 msgstr "%1 - Registrace pro %2 (%3)"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:68
-#, fuzzy
 msgid "%1 - complete Foswiki documentation, Quick Start to Reference"
-msgstr "%1 - kompletní dokumentace TWiki, od přehledu k podrobné referenci"
+msgstr "%1 - kompletní dokumentace, od přehledu k podrobné referenci"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:70
 msgid "%1 - just for me"
 msgstr "%1 - pouze pro mne"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:67
-#, fuzzy
 msgid "%1 - starting points on Foswiki"
-msgstr "1 - výchozí bod v TWiki"
+msgstr "1 - výchozí místa ve Foswiki"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:69
-#, fuzzy
 msgid "%1 - try out Foswiki on your own"
-msgstr "%1 - zkuste si TWiki sami"
+msgstr "%1 - vyzkoušejte si Foswiki sami"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:66
-#, fuzzy
 msgid "%1 - view a short introductory presentation on Foswiki for beginners"
-msgstr "%1 - krátká prezentace TWiki pro začátečníky"
+msgstr "%1 - prohlédněte si krátkou prezentaci na Foswiki pro začátečníky"
 
 #: core/data/System/WebChanges.txt:2
-#, fuzzy
 msgid "%1 Recent Changes in %2 Web"
-msgstr "Zkontrolujte poslední změny v:"
+msgstr "%1 Poslední změny na %2 webu."
 
 #: PatternSkin/templates/view.pattern.tmpl:43
 msgid "%1 Web"
@@ -96,9 +93,8 @@ msgstr "%1 pro změnu Vašeho hesla"
 #: TopicUserMappingContrib/data/System/ChangePassword.txt:37
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:85
 #: TopicUserMappingContrib/data/System/ResetPassword.txt:38
-#, fuzzy
 msgid "%1 has a list of other Foswiki users"
-msgstr "%1 má seznam ostatních uživatelů TWiki"
+msgstr "%1 má seznam ostatních uživatelů Foswiki"
 
 #: core/templates/messages.tmpl:438
 msgid ""
@@ -120,13 +116,12 @@ msgid "%1 home"
 msgstr "%1 Domů"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:86
-#, fuzzy
 msgid "%1 is a list of Foswiki user documentation"
-msgstr "%1 je seznam uživatelské dokumentace"
+msgstr "%1 je seznamem uživatelské dokumentace"
 
 #: core/templates/messages.tmpl:114
 msgid "%1 is an invalid name for a new web"
-msgstr "%1 je chybné jm´´eno pro nový web"
+msgstr "%1 je chybné jméno pro nový web"
 
 #: core/templates/login.sudo.tmpl:4 core/templates/login.tmpl:6
 msgid "%1 is currently logged in"
@@ -3819,9 +3814,8 @@ msgid ""
 msgstr "Hledej články ve webu %1 které sem odkazují"
 
 #: core/templates/viewtopicactionbuttons.tmpl:38
-#, fuzzy
 msgid "title='View raw text without formatting' accesskey='r'>&Raw View"
-msgstr "Prohlédni nepracovaný text (bez formátování)"
+msgstr "title='Zobraz zdrojový text (bez formátování)' accesskey='r'>&Raw View"
 
 #: core/templates/viewtopicactionbuttons.tmpl:11
 msgid "title='View topic' accesskey='v'>&View topic"
@@ -3829,9 +3823,8 @@ msgstr ""
 
 #: core/templates/viewtopicactionbuttons.tmpl:33
 #: core/templates/viewtopicactionbuttons.tmpl:35
-#, fuzzy
 msgid "title='View total topic history' accesskey='h'>&History"
-msgstr "Ukaž celou historii článku"
+msgstr "title='Ukaž celou historii článku' accesskey='h'>&History"
 
 #: core/lib/Foswiki.pm:4374
 msgid "user list truncated"
