--- a/core/locale/pl.po
+++ b/core/locale/pl.po
@@ -6,12 +6,16 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-05-18 14:42+0100\n"
+"PO-Revision-Date: 2009-06-19 12:31+0200\n"
 "Last-Translator: Daniel Kownacki <d.kownacki@gmail.com>\n"
 "Language-Team: Polish <kuleszbi@@pb.bialystok.pl>\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 1.2.1\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:450
@@ -57,7 +61,7 @@ msgstr ""
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:70
 msgid "%1 - just for me"
-msgstr "%1 - właśnie dla mnie"
+msgstr "%1 - tylko dla mnie"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:67
 msgid "%1 - starting points on Foswiki"
@@ -69,7 +73,8 @@ msgstr "%1 - wypróbuj Foswiki"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:66
 msgid "%1 - view a short introductory presentation on Foswiki for beginners"
-msgstr "%1 - wprowadzenie dla początkujących"
+msgstr ""
+"%1 - obejrzyj krótką prezentację wprowadzającą w Foswiki dla początkujących"
 
 #: core/data/System/WebChanges.txt:2
 msgid "%1 Recent Changes in %2 Web"
@@ -109,7 +114,7 @@ msgstr "Użytkownik %1 został zarejestrowany z adresem email: %2"
 
 #: core/templates/validate.tmpl:14
 msgid "%1 has received a suspicious change request from your browser."
-msgstr ""
+msgstr "%1 otrzymał podejrzane żądanie zmiany od twojej przeglądarki."
 
 #: core/templates/messages.tmpl:23
 msgid "%1 home"
@@ -201,9 +206,8 @@ msgid "(%1 login)"
 msgstr "(logowanie %1)"
 
 #: core/templates/validate.tmpl:6
-#, fuzzy
 msgid "(%1 validation)"
-msgstr "(logowanie %1)"
+msgstr "(aktywacja %1)"
 
 #: PatternSkin/templates/rdiff.pattern.tmpl:6 core/templates/rdiff.tmpl:4
 msgid "(%1 vs. %2)"
@@ -3810,7 +3814,7 @@ msgstr "wyświetl"
 
 #: core/templates/validate.tmpl:23
 msgid "why you are being asked to confirm"
-msgstr ""
+msgstr "dlaczego jesteś pytany o potwierdzenie"
 
 #: TopicUserMappingContrib/data/System/ResetPassword.txt:22
 msgid ""
