--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2009-06-19 14:22+0200\n"
 "Last-Translator: Joel DeJesus <dejesus.joel@gmail.com>\n"
-"Language-Team: TWiki Japanese &lt;<ken.yuminaga at gmail.com>&gt;\n"
+"Language-Team: Foswiki Japanese team\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
