Item1752: I am a Foswiki author, now :)
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4233 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -34,6 +34,7 @@ The following people are identified as authors of Foswiki:
 | Lars Eik             | Foswiki:Main.LarsEik           | Norway      |
 | Martin Cleaver       | Foswiki:Main.MartinCleaver     | Canada      |
 | Michael Daum         | Foswiki:Main.MichaelDaum       | Germany     |
+| Michael Tempest      | Foswiki:Main.MichaelTempest    | South Africa|
 | Olivier Raginel      | Foswiki:Main.OlivierRaginel    | France      |
 | Raul F Rodriguez     | Foswiki:Main.RaulFRodriguez    | France      |
 | Rob Manson           | Foswiki:Main.RobManson         | Australia   |
