--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -6,12 +6,15 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2008-12-20 13:44-0300\n"
-"Last-Translator: Lars Eik <n/a>\n"
+"PO-Revision-Date: 2009-06-20 22:13+0200\n"
+"Last-Translator: Lars Eik <lars.eik@gmail.com>\n"
 "Language-Team: Norwegian <LL@li.org>\n"
+"Language: no\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.2.1\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:450
@@ -106,7 +109,7 @@ msgstr "%1 er registrert med epost %2"
 
 #: core/templates/validate.tmpl:14
 msgid "%1 has received a suspicious change request from your browser."
-msgstr ""
+msgstr "%1 har mottatt en mistenkelig endringsforespørsel fra din nettleser."
 
 #: core/templates/messages.tmpl:23
 msgid "%1 home"
@@ -198,9 +201,8 @@ msgid "(%1 login)"
 msgstr "(%1 logg inn)"
 
 #: core/templates/validate.tmpl:6
-#, fuzzy
 msgid "(%1 validation)"
-msgstr "(%1 logg inn)"
+msgstr "(%1 bekreftelse)"
 
 #: PatternSkin/templates/rdiff.pattern.tmpl:6 core/templates/rdiff.tmpl:4
 msgid "(%1 vs. %2)"
